# logger

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md_source.html  annotated.html  base__thr__safety_8h.html  base__thr__safety_8h_source.html  class_a_logger_1_1_a_logger_base-members.html  class_a_logger_1_1_a_logger_base.html  class_a_logger_1_1_a_logger_base_thr_safety_3_01false_00_01___t_log_data_01_4-members.html  class_a_logger_1_1_a_logger_base_thr_safety_3_01false_00_01___t_log_data_01_4.html  class_a_logger_1_1_a_logger_base_thr_safety_3_01true_00_01___t_log_data_01_4-members.html  class_a_logger_1_1_a_logger_base_thr_safety_3_01true_00_01___t_log_data_01_4.html  class_a_logger_1_1_a_logger_group-members.html  class_a_logger_1_1_a_logger_group.html  class_a_logger_1_1_a_logger_group_task-members.html  class_a_logger_1_1_a_logger_group_task.html  class_a_logger_1_1_a_logger_task-members.html  class_a_logger_1_1_a_logger_task.html  class_a_logger_1_1_a_logger_txt_base-members.html  class_a_logger_1_1_a_logger_txt_base.html  class_a_logger_1_1_a_logger_txt_file-members.html  class_a_logger_1_1_a_logger_txt_file.html  class_a_logger_1_1_a_logger_txt_group.html  class_a_logger_1_1_i_logger_group.html  class_a_logger_1_1_i_task_logger-members.html  class_a_logger_1_1_i_task_logger.html  class_logger_1_1_c_logger_base-members.html  class_logger_1_1_c_logger_base_thr_safety.html  class_logger_1_1_c_logger_base_thr_safety_3_01false_00_01___t_log_data_01_4-members.html  class_logger_1_1_c_logger_base_thr_safety_3_01false_00_01___t_log_data_01_4.html  class_logger_1_1_c_logger_base_thr_safety_3_01true_00_01___t_log_data_01_4-members.html  class_logger_1_1_c_logger_base_thr_safety_3_01true_00_01___t_log_data_01_4.html  class_logger_1_1_c_logger_group-members.html  class_logger_1_1_c_logger_group.html  class_logger_1_1_c_logger_group_task-members.html  class_logger_1_1_c_logger_group_task.html  class_logger_1_1_c_logger_task-members.html  class_logger_1_1_c_logger_task.html  (+62 more)
LoggerBase/: CMakeLists.txt
LoggerBase/include/avn/logger/: base_thr_safety.h  data_types.h  logger_base.h  logger_group.h  logger_group_task.h  logger_task.h  task.h
LoggerBase/src/: logger_base.cpp
LoggerTxt/: CMakeLists.txt
LoggerTxt/include/avn/logger/: logger_txt.h
LoggerTxtBase/: CMakeLists.txt
LoggerTxtBase/include/avn/logger/: logger_txt_base.h  logger_txt_group.h  logger_txt_group_task.h
LoggerTxtCOut/: CMakeLists.txt
LoggerTxtCOut/include/avn/logger/: logger_txt_cout.h
LoggerTxtCout/: CMakeLists.txt
LoggerTxtFile/: CMakeLists.txt
LoggerTxtFile/include/avn/logger/: logger_txt_file.h
Test/: CMakeLists.txt  main.cpp
Test/include/: tests.h
Test/src/: logger_base.cpp  logger_txt.cpp  logger_txt_base.cpp  logger_txt_cout.cpp  logger_txt_file.cpp  logger_txt_group.cpp
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  files_0.js  files_3.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  typedefs_0.js  variables_1.js
v1.1/: annotated.html  base__thr__safety_8h.html  class_logger_1_1_c_logger_base.html  class_logger_1_1_c_logger_base_thr_safety.html  class_logger_1_1_c_logger_base_thr_safety_3_01false_00_01___t_log_data_01_4.html  class_logger_1_1_c_logger_base_thr_safety_3_01true_00_01___t_log_data_01_4-members.html  class_logger_1_1_c_logger_base_thr_safety_3_01true_00_01___t_log_data_01_4.html  class_logger_1_1_c_logger_group.html  class_logger_1_1_c_logger_group_task-members.html  class_logger_1_1_c_logger_group_task.html  class_logger_1_1_c_logger_txt_base.html  class_logger_1_1_c_logger_txt_base_defaults-members.html  class_logger_1_1_c_logger_txt_base_defaults.html  class_logger_1_1_c_logger_txt_c_out-members.html  class_logger_1_1_c_logger_txt_c_out.html  class_logger_1_1_c_logger_txt_c_out_stream-members.html  class_logger_1_1_c_logger_txt_c_out_stream.html  class_logger_1_1_c_logger_txt_file-members.html  class_logger_1_1_c_logger_txt_file.html  class_logger_1_1_c_logger_txt_group-members.html  class_logger_1_1_c_logger_txt_group.html  class_logger_1_1_i_logger_group-members.html  class_logger_1_1_i_logger_group.html  class_logger_1_1_i_task_logger.html  classes.html  data__types_8h.html  dir_1cf6c6e32eb1a6344da9e67297c9b503.html  dir_26d3e0709cdf3c43e66c3fc7b050a0ab.html  dir_39cc703a781c38188b28d8ba33b93a88.html  dir_3aff256326a031d244d0b864a1bccb0d.html  dir_4b0ec0f1deb549119b4adc8f82d2b866.html  dir_8fef5e6a63d7d4acec4af3d7230493bd.html  dir_90c853eae06af8c4f2f9fd751688150a.html  dir_bf6ed05c85267a63b00a554dd4e72077.html  dir_dd619a56ff99a1bbf31613af76950f9c.html  dir_e2a7a23ca2dd1cef59db3000664ddfc7.html  dir_f4bd2b9b80a1a36a42f42284388deda6.html  files.html  functions_type.html  functions_vars.html  (+14 more)
v1.2/: annotated.html  base__thr__safety_8h.html  base__thr__safety_8h_source.html  class_a_logger_1_1_a_logger_base-members.html  class_a_logger_1_1_a_logger_base.html  class_a_logger_1_1_a_logger_base_thr_safety.html  class_a_logger_1_1_a_logger_base_thr_safety_3_01false_00_01___t_log_data_01_4-members.html  class_a_logger_1_1_a_logger_base_thr_safety_3_01false_00_01___t_log_data_01_4.html  class_a_logger_1_1_a_logger_base_thr_safety_3_01true_00_01___t_log_data_01_4.html  class_a_logger_1_1_a_logger_group-members.html  class_a_logger_1_1_a_logger_group.html  class_a_logger_1_1_a_logger_group_task-members.html  class_a_logger_1_1_a_logger_group_task.html  class_a_logger_1_1_a_logger_task-members.html  class_a_logger_1_1_a_logger_task.html  class_a_logger_1_1_a_logger_txt_base-members.html  class_a_logger_1_1_a_logger_txt_base.html  class_a_logger_1_1_a_logger_txt_file.html  class_a_logger_1_1_a_logger_txt_group-members.html  class_a_logger_1_1_a_logger_txt_group.html  class_a_logger_1_1_i_logger_group-members.html  class_a_logger_1_1_i_task_logger-members.html  class_a_logger_1_1_i_task_logger.html  classes.html  data__types_8h.html  files.html  (+34 more)
(+35 files in other folders)
